--- a/People.Rmd
+++ b/People.Rmd
@@ -8,7 +8,7 @@ output:
 ## Current Lab Members
 
 <div style="display: flex; align-items: center; flex-direction: row;">
-  <img src="images/profile.jpg" alt="Profile Image" style="width: 40%;">
+  <img src="images/profile_new.jpg" alt="Profile Image" style="width: 200px; height: 250px;">
   <p style="margin-left: 20px; text-align: left; line-height: 1.5; font-size: 1.2em;">
     <span style="font-weight: bold; font-size: 1.2em; color: blue">Anderson A. C. Alves [<span style="color: red;"> [CV]</span>](https://github.com/alvesand/CV/blob/main/CV-master/CV.pdf)</span><br>
     <span style="font-weight: bold; font-size: 1.0em;">Ph.D. Sao Paulo State University, Brazil</span><br>
@@ -20,7 +20,7 @@ output:
 
 
 <div style="display: flex; align-items: center; flex-direction: row;">
-  <img src="images/profile_icon.png" alt="Profile Image" style="width: 40%;">
+  <img src="images/jordan.jpg" alt="Profile Image" style="width: 200px;">
   <p style="margin-left: 20px; text-align: left; line-height: 1.5; font-size: 1.2em;">
     <span style="font-weight: bold; font-size: 1.2em; color: blue">Jordan M. Hooker</span><br> 
     <span style="font-weight: bold; font-size: 1.0em;">M.S. Student</span><br>
