--- a/publications.Rmd
+++ b/publications.Rmd
@@ -7,7 +7,17 @@ output:
 
 <img src="images/paper.png" alt="Profile Image" style="width: 40%;">
 
+
+## 2025
+
+* Freitas LA, Ferreira RE, **Alves AAC**, Dorea JR, Paz CCP, Rosa GJM (2025). Detection of anemic sheep using ocular conjunctiva images and deep learning algorithms. *Livestock Science*, 294:105669. [https://doi.org/10.1016/j.livsci.2025.105669](https://doi.org/10.1016/j.livsci.2025.105669) 
+
+
 ## 2024
+
+* Bussiman F, **Alves AAC**, Richter J, Hidalgo J, Veroneze R, Oliveira T (2024). Supervised machine
+learning techniques for breeding value prediction in horses: An example using gait visual scores. *Animals*,
+14(18). [https://doi.org/10.3390/ani14182723] (https://doi.org/10.3390/ani14182723)
 
 * **Alves AAC**, Fernandes AFA, Breen V, Hawken R, Rosa GJM (2024) Monitoring mortality and welfare-culling in group-housed broilers using machine learning algorithms trained with feeding behavior time-series data.  *Comput. Electron. Agric.*, 224:109124. [https://doi.org/10.1016/j.compag.2024.109124](https://doi.org/10.1016/j.compag.2024.109124) 
 
@@ -64,4 +74,3 @@ of Angus cattle. *Scientific Reports* 10:8770. [doi:10.1038/s41598-020- 65565-1]
 Lôbo RNB (2019) Multiple regression and machine learning-based methods for carcass traits
 and saleable meat cuts prediction using non-invasive in vivo measurements in commercial
 lambs. *Small Ruminant Research* 171:49-56. [doi: 10.1016/j.smallrumres.2018.12.008](https://www.sciencedirect.com/science/article/pii/S0921448818310265)
-
